python3: add python3-tools subpackage
Useful in developing Python, e.g. in benchmarking.

[YOCTO #9338]

Signed-off-by: Markus Lehtonen <markus.lehtonen@linux.intel.com>

--- a/meta/recipes-devtools/python/python3/python3-manifest.json
+++ b/meta/recipes-devtools/python/python3/python3-manifest.json
@@ -1079,6 +1079,17 @@
         ],
         "summary": "Python Tcl/Tk bindings"
     },
+    "tools": {
+        "cached": [],
+        "files": [
+            "${docdir}/${PN}/Tools"
+        ],
+        "rdepends": [
+            "core",
+            "modules"
+        ],
+        "summary": "Useful scripts from Python"
+    },
     "typing": {
         "cached": [
             "${libdir}/python3.5/__pycache__/typing.*.pyc"
